--- a/modules/KalturaSupport/tests/BindUnbind.qunit.html
+++ b/modules/KalturaSupport/tests/BindUnbind.qunit.html
@@ -12,100 +12,141 @@
 			module( "kBind / kUnbind" );
 			var kdp = $( '#' + playerId ).get( 0 );
 			test( "kBind :: Namespaced event ( doPlay.test ) + Global callback name", function() {
+				stop();
 				window.doPlayCallback = function() {
 					window[ 'playCount' ]++;
 					ok( true, "doPlayCallback binded to doPlay.test" );
+					start();
 				}
 				kdp.kBind( "doPlay.test", "doPlayCallback" );
 				kdp.sendNotification( "doPlay" );
 			} );
 			test( "kBind :: Namespaced event ( doPause.test ) + Anonymous function", function() {
+				stop();
 				kdp.kBind( "doPause.test", function() {
 					window[ 'pauseCount' ]++;
 					ok( true, "Anonymous function binded to doPause.test" );
+					start();
 				} );
-				kdp.sendNotification( "doPause" );
+				setTimeout( function() {
+					kdp.sendNotification( "doPause" );
+				}, 250 );
 			} );
 			test( "kUnbind :: Whole Namespace ( .test )", function() {
+				stop();
 				var currentPauseCount = window[ 'pauseCount' ];
 				var currentPlayCount = window[ 'playCount' ];
 				kdp.kUnbind( ".test" );
 				kdp.sendNotification( "doPlay" );
 				equal( currentPlayCount, window[ 'playCount'], "Unbinded doPlay.test (Checking playCount value)" );
-				kdp.sendNotification( "doPause" );
-				equal( currentPauseCount, window[ 'pauseCount'], "Unbinded doPause.test (Checking pauseCount value)" );
+				setTimeout( function() {
+					kdp.sendNotification( "doPause" );
+					equal( currentPauseCount, window[ 'pauseCount'], "Unbinded doPause.test (Checking pauseCount value)" );
+					start();
+				}, 250 );
 			} );
 			test( "kBind :: Non-Namespaced Event ( doPlay ) + Global callback name", function() {
+				stop();
 				window.doPlayCallback = function() {
 					window[ 'playCount' ]++;
-					ok( true, "doPlayCallback binded to doPlay.test" );
+					ok( true, "doPlayCallback binded to doPlay" );
+					start();
 				}
 				kdp.kBind( "doPlay", "doPlayCallback" );
 				kdp.sendNotification( "doPlay" );
 			} );
 			test( "kBind :: Non-Namespaced Event ( doPause ) + Anonymous function", function() {
+				stop();
 				kdp.kBind( "doPause", function() {
 					window[ 'pauseCount' ]++;
 					ok( true, "Anonymous function binded to doPause" );
+					start();
 				} );
-				kdp.sendNotification( "doPause" );
+				setTimeout( function() {
+					kdp.sendNotification( "doPause" );
+				}, 250 );
 			} );
 			test( "kUnbind :: Eventname ( doPlay / doPause )", function() {
+				stop();
 				var currentPlayCount = window[ 'playCount' ];
 				var currentPauseCount = window[ 'pauseCount' ];		
 				kdp.kUnbind( "doPlay" );
 				kdp.kUnbind( "doPause" );
 				kdp.sendNotification( "doPlay" );
 				equal( currentPlayCount, window[ 'playCount'], "Unbinded doPlay (Checking playCount value)" );
-				kdp.sendNotification( "doPause" );
-				equal( currentPauseCount, window[ 'pauseCount'], "Unbinded doPause (Checking pauseCount value)" );
+				setTimeout( function() {
+					kdp.sendNotification( "doPause" );
+					equal( currentPauseCount, window[ 'pauseCount'], "Unbinded doPause (Checking pauseCount value)" );
+					start();
+				}, 250 );
 			} );
-			test( "kUnbind :: Namespaced event ( doPlay.test )", function() {
+			test( "kUnbind :: Namespaced event ( doPlay.tounbind )", function() {
+				stop();
 				kdp.kBind( "doPlay.ns", function() {
 					window[ 'playCount' ]++;
-				} )
+				} );
 				kdp.kBind( "doPlay.tounbind", function() {
 					window[ 'playCount' ] += 9;
 				} );
 				kdp.sendNotification( "doPlay" );
-				kdp.sendNotification( "doPause" );
 				var currentPlayCount = window[ 'playCount' ];
 				kdp.kUnbind( "doPlay.tounbind" );
-				kdp.sendNotification( "doPlay" );
-				equal( ++currentPlayCount, window[ 'playCount'], "Unbinded doPlay.tounbind (Checking playCount value)" );
-				kdp.kUnbind( "doPlay.ns" );
-				kdp.sendNotification( "doPause" );
+				setTimeout( function() {
+					kdp.sendNotification( "doPause" );
+					setTimeout( function() {
+						kdp.sendNotification( "doPlay" );
+						kdp.kUnbind( "doPlay.ns" );
+						setTimeout( function() {
+							kdp.sendNotification( "doPause" );
+							equal( ++currentPlayCount, window[ 'playCount'], "Unbinded doPlay.tounbind (Checking playCount value)" );
+							start();
+						}, 250 );					
+					}, 250 );
+				}, 250 );
 			} );
 			test( "kUnbind :: Eventname ( doPlay ) + Non-existing global callback name / namespace", function() {
+				stop();
 				kdp.kBind( "doPlay", function() {
 					window[ 'playCount' ]++;
 				} );
 				kdp.kUnbind( "doPlay", "wrongName" );
 				var currentPlayCount = window[ 'playCount' ];
 				kdp.sendNotification( "doPlay" );
-				equal( ++currentPlayCount, window[ 'playCount'], "doPlay was not unbound due to a non-existing global callback name (Checking playCount value)" );
-				kdp.kUnbind( "doPlay.test" );
-				kdp.sendNotification( "doPause" );
-				kdp.sendNotification( "doPlay" );
-				equal( ++currentPlayCount, window[ 'playCount'], "doPlay was not unbound due to a non-existing namespace (Checking playCount value)" );
-				kdp.kUnbind( "doPlay" );
-				kdp.sendNotification( "doPause" );
+				setTimeout( function() {				
+					equal( ++currentPlayCount, window[ 'playCount'], "doPlay was not unbound due to a non-existing global callback name (Checking playCount value)" );
+					kdp.kUnbind( "doPlay.test" );
+					kdp.sendNotification( "doPause" );
+					setTimeout( function() {
+						kdp.sendNotification( "doPlay" );
+						setTimeout( function() {
+							equal( ++currentPlayCount, window[ 'playCount'], "doPlay was not unbound due to a non-existing namespace (Checking playCount value)" );
+							kdp.kUnbind( "doPlay" );
+							kdp.sendNotification( "doPause" );
+							start();
+						}, 250 );
+					}, 250 );
+				}, 250 );
 			} );
 			test( "Chaining both functions", function() {
+				stop();
 				kdp.kBind( "doPlay.chaining", function() {
 					window[ 'playCount' ]++;
 				} );
 				var currentPlayCount = window[ 'playCount' ];
 				kdp.sendNotification( "doPlay" );
-				equal( ++currentPlayCount, window[ 'playCount'], "Anonymous function binded to doPlay.chaining (Checking playCount value)" );
-				kdp.kUnbind( ".chaining" ).kBind( "doPause.chaining", function() {
-					window[ 'pauseCount' ]++;
-				} );
-				var currentPauseCount = window[ 'pauseCount' ];		
-				kdp.sendNotification( "doPause" );
-				equal( ++currentPauseCount, window[ 'pauseCount'], "Anonymous function binded to doPause using chained form kUnbind().kBind() (Checking pauseCount value)" );
-				equal( currentPlayCount, window[ 'playCount'], "Unbinded .chaining namespace using chained form kUnbind().kBind() (Checking playCount value)" );
-				kdp.kUnbind( "doPause.chaining" );
+				setTimeout( function() {
+					equal( ++currentPlayCount, window[ 'playCount'], "Anonymous function binded to doPlay.chaining (Checking playCount value)" );
+					kdp.kUnbind( ".chaining" ).kBind( "doPause.chaining", function() {
+						window[ 'pauseCount' ]++;
+					} );
+					var currentPauseCount = window[ 'pauseCount' ];
+					kdp.sendNotification( "doPause" );
+					setTimeout( function() {
+						equal( ++currentPauseCount, window[ 'pauseCount'], "Anonymous function binded to doPause using chained form kUnbind().kBind() (Checking pauseCount value)" );
+						equal( currentPlayCount, window[ 'playCount'], "Unbinded .chaining namespace using chained form kUnbind().kBind() (Checking playCount value)" );
+						start();
+					}, 250 );
+				}, 250 );
 			} );
 		}
 	</script>
@@ -118,14 +159,7 @@
 	<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
 	<br />
 	<div id="myVideoTarget" style="width: 400px; height: 330px"></div>
-	<div>
-		Anonymous functions are binded to doPlay and doPause events using .bindTest namespace:
-		<ul>
-			<li>On playerReady, binds <strong><i>doPlay.bindTest</i></strong></li>
-			<li>When doPlay is triggered, the callback writes to console log and binds <strong><i>doPause.bindTest</i></strong></li>
-			<li>When doPause is triggered, the callback writes to console log and unbinds <strong><i>.bindTest</i></strong> namespace</li>
-		</ul>
-	</div>
+
 	<script>
 		kWidget.embed({
 			'targetId': 'myVideoTarget',
@@ -136,13 +170,7 @@
 				'externalInterfaceDisabled' : false
 			},
 			'readyCallback': function( playerId ) {
-				var kdp = $( '#' + playerId ).get( 0 );
-				kdp.kBind( "doPlay.bindTest", function() {
-					console.log( 'doPlay binded successfully' );
-					kdp.kBind( "doPause.bindTest", function() {
-						console.log( 'doPause binded successfully\nUnbinding .bindtest namespace' );
-					} ).kUnbind( ".bindTest" );
-				} );
+				console.log( playerId + ' is ready' );
 			}
 		} );
 	</script>
