added additional descriptive text to leadWithHTML5 example

--- a/modules/KalturaSupport/tests/LeadWithHTML5.html
+++ b/modules/KalturaSupport/tests/LeadWithHTML5.html
@@ -33,7 +33,7 @@ function jsKalturaPlayerTest( videoId ){
 <body>
 <h2> Lead With HTML5 test </h2>
 
-Will use HTML5 on all browsers that support HTML5<br>
+Will use HTML5 on all browsers that support HTML5 ( browsers such as IE8 or browsers with broken HTML5 ( IE9 ) will get the flash player if possible )<br>
 <b>mw.setConfig( 'KalturaSupport.LeadWithHTML5', true ) </b><br>
 <i> Be sure to include webm flavors in your source video. </i><br>
 
