--- a/modules/KalturaSupport/tests/kWidget.embed.qunit.html
+++ b/modules/KalturaSupport/tests/kWidget.embed.qunit.html
@@ -62,6 +62,28 @@ function jsKalturaPlayerTest( videoId ){
 					equal( playerId, 'myVideoTarget', "Ready callback for re-embed is valid" );
 					
 					callOnce = true;
+					testKWidgetOverrideWithoutDestory();
+					start();
+				}
+			})
+		});
+	}
+	
+	window['testKWidgetOverrideWithoutDestroy'] = function(){
+		asyncTest( "Test KWidget Override Without Destroy", function(){
+			var callOnce = false;
+			kWidget.embed({
+				'targetId': 'myVideoTarget',
+				'wid': '_243342',
+				'uiconf_id' : '2877502',
+				'entry_id' : '0_uka1msg4',
+				'readyCallback': function( playerId ){
+					if( callOnce ){
+						ok( false, "Error called ready callback twice")	;
+					}
+					equal( playerId, 'myVideoTarget', "Ready callback Override re-embed is valid" );
+					
+					callOnce = true;
 					start();
 				}
 			})
