--- a/modules/SiteCatalyst15/tests/siteCatalyst15.qunit.html
+++ b/modules/SiteCatalyst15/tests/siteCatalyst15.qunit.html
@@ -1,51 +1,46 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>kWidget Player test</title>
+<title>Omniture siteCatalyst15 test</title>
 <script type="text/javascript" src="../../../tests/qunit/qunit-bootstrap.js"></script>
-<script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
+<script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
 <script type="text/javascript">	
-
 function jsKalturaPlayerTest( videoId ){
-	// Name this module 
-	module( "Site Catalyst 15 test" );
-	asyncTest( "MediaReady events dispatch", function(){
-		kalturaQunitWaitForPlayer( function(){
-			
-		});
-	});
+	
+	// Name this module
+	module( "Omniture siteCatalyst15 test" );
+
 }
 </script>
+<script>
+	function jsCallbackReady( videoId ){
+		if( console && console.log ){
+			console.log( 'jsCallbackReady: ' + videoId );
+		}
+	}
+</script>
+
 <!-- qunit-kaltura must come after qunit-bootstrap.js and after mwEmbedLoader.php and after any jsCallbackReady stuff-->
-<script type="text/javascript" src="resources/qunit-kaltura-bootstrap.js"></script>
+<script type="text/javascript" src="../../KalturaSupport/tests/resources/qunit-kaltura-bootstrap.js"></script>
 </head>
 <body>
-<h2> kWidget Player test </h2>
+<h2> Omniture siteCatalyst15 test </h2>
 <a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
 <br />
-<div id="myVideoContainer">
-	<div id="myVideoTarget" style="width:400px;height:330px;">
-		<!--  SEO and video metadata go here -->
-		<span property="dc:description" content="test folgers coffe"></span>
-		<span property="media:title" content="FolgersCoffe.mpeg"></span>
-		<span property="media:width" content="400"></span>
-		<span property="media:height" content="300"></span>
-	</div>
-</div>
+
+<div id="kaltura_player" style="width:400px;height:330px"></div>
 <script>
-	window['doPlayCallback'] = function( playerId ){
-		console.log( 'kWidget doPlayCallback ' + playerId );
-		//$('body').append( '<div>started playback</div>' );
-	};
-	kWidget.embed({
-		'targetId': 'myVideoTarget',
-		'wid': '_243342',
+	kWidget.embed( 'kaltura_player', {
+		'wid' : '_243342',
 		'uiconf_id' : '2877502',
 		'entry_id' : '0_uka1msg4',
-		'flashvars': {
+		'flashvars' : {
+			// You can set your sCodePath to your gennerated s_code.js location 
+			// ( else will use the generic copy hosted in the plugin )
+			'siteCatalyst15.sCodePath' : null,
 			'siteCatalyst15.plugin' : true,
-			'siteCatalyst15.path' : '/content/uiconf/americanfamily/kdp3/v3.5.50/plugins/',
-			'siteCatalyst15.relativeTo' : 'video'
+			'siteCatalyst15.path' : 'http://projects.kaltura.com/eitan/omniture/sc15/siteCatalyst15Plugin.swf',
+			'siteCatalyst15.relativeTo' : 'video',
 			'siteCatalyst15.position' : 'before',
 			'siteCatalyst15.trackingServer' : 'corp1.d1.sc.omtrdc.net',
 			'siteCatalyst15.visitorNamespace' : 'corp1',
@@ -58,34 +53,23 @@ function jsKalturaPlayerTest( videoId ){
 			'siteCatalyst15.mediaSegmentView' : 'event34',
 			'siteCatalyst15.mediaView' : 'event28',
 			'siteCatalyst15.mediaComplete' : 'event33',
-			'siteCatalyst15.trackMilestones' : '25,50,75', 
+			'siteCatalyst15.trackMilestones' : '25,50,75',
 			'siteCatalyst15.milestonesEvents' : 'event25,event50,event75',
 			'siteCatalyst15.shareEvent' : 'event22',
 			'siteCatalyst15.shareEventEvar1' : 'eVar18',
 			'siteCatalyst15.shareEventEvar1Value' : '{mediaProxy.entry.id}',
-			'siteCatalyst15.shareEventEvar2' : 'eVar19', 
+			'siteCatalyst15.shareEventEvar2' : 'eVar19',
 			'siteCatalyst15.shareEventEvar2Value' : '{configProxy.flashvars.referer}',
 			'siteCatalyst15.shareEventProp1' : 'prop33',
-			'siteCatalyst15.shareEventprop1Value' : '{mediaProxy.entry.id}',
+			'sieCatalyst15.shareEventprop1Value' : '{mediaProxy.entry.id',
 			'siteCatalyst15.shareEventProp2' : 'prop32',
 			'siteCatalyst15.shareEventprop2Value' : '{configProxy.flashvars.referer}'
 		}
 	});
 </script>
-<p><p>
 <!-- 
-<b> Slow loading document.write scripts </b>
-<script type="text/javascript" src="../../../services.php?service=sleepTest&waitTime=0"></script>
-<script type="text/javascript" src="../../../services.php?service=sleepTest&waitTime=1"></script>
-<script type="text/javascript" src="../../../services.php?service=sleepTest&waitTime=2"></script>
-<script type="text/javascript" src="../../../services.php?service=sleepTest&waitTime=3"></script>
-<script type="text/javascript" src="../../../services.php?service=sleepTest&waitTime=4"></script>
-<script type="text/javascript" src="../../../services.php?service=sleepTest&waitTime=5"></script>
-<script type="text/javascript" src="../../../services.php?service=sleepTest&waitTime=6"></script>
- -->
- 
-<!-- 
- <layout id="default player dark" skinPath="/content/uiconf/kaltura/kmc/nab/skin.swf?a=6‬">
+
+<layout id="default player dark" skinPath="/content/uiconf/kaltura/kmc/nab/skin.swf?a=6‬">
   <HBox id="topLevel" width="100%" height="100%">
     <VBox id="player" width="100%" height="100%" styleName="black">
       <Plugin id="kalturaMix" width="0%" height="0%" includeInLayout="false" loadingPolicy="onDemand"/>
@@ -101,7 +85,7 @@ function jsKalturaPlayerTest( videoId ){
 				    <Label 
 				      id="offlineMessage" styleName="offlineMessage"
 				      text="{mediaProxy.entry.offlineMessage}" visible="{mediaProxy.isOffline}"
-				      width="100%" height="30"/>
+				      width="100%" height="30"/> 
 			     	<Spacer height="100%" />
 		    	</VBox>
         <Screens id="screensLayer" width="100%" height="100%" mouseOverTarget="{PlayerHolder}" styleName="clickThrough" startScreenId="startScreen" startScreenOverId="startScreen" pauseScreenOverId="pauseScreen" pauseScreenId="pauseScreen" playScreenOverId="playScreen" endScreenId="endScreen" endScreenOverId="endScreen"/>
@@ -257,7 +241,7 @@ function jsKalturaPlayerTest( videoId ){
   </uiVars>
 </layout>
 
-  -->
- 
+ -->
+
 </body>
 </html>
