added ref to localPlayer name, fixed typo in html file.

--- a/modules/SiteCatalyst15/tests/siteCatalyst15.qunit.html
+++ b/modules/SiteCatalyst15/tests/siteCatalyst15.qunit.html
@@ -61,7 +61,7 @@ function jsKalturaPlayerTest( videoId ){
 			'siteCatalyst15.shareEventEvar2' : 'eVar19',
 			'siteCatalyst15.shareEventEvar2Value' : '{configProxy.flashvars.referer}',
 			'siteCatalyst15.shareEventProp1' : 'prop33',
-			'sieCatalyst15.shareEventprop1Value' : '{mediaProxy.entry.id',
+			'siteCatalyst15.shareEventprop1Value' : '{mediaProxy.entry.id',
 			'siteCatalyst15.shareEventProp2' : 'prop32',
 			'siteCatalyst15.shareEventprop2Value' : '{configProxy.flashvars.referer}'
 		}
