--- a/modules/DoubleClick/tests/DoubleClickManagedPlayerAdApi.qunit.html
+++ b/modules/DoubleClick/tests/DoubleClickManagedPlayerAdApi.qunit.html
@@ -103,7 +103,9 @@ all ad slots and overlays are loaded from server.
 		'entry_id': '0_uka1msg4',
 		'flashvars' : {
 			'doubleClick.customParams' : 'foo=bar&cat=fish',
-			'doubleClick.cmsId': 244
+			'doubleClick.cmsId': 244,
+			// sibling ad ( can be false ( deafult ), true ( only true for platforms other than iOS )
+			'doubleClick.videoTagSiblingAd': false
 		}
 	});
 </script>
