--- a/modules/KalturaSupport/tests/AccessControlPlaylistBlockMobileFirstEntry.qunit.html
+++ b/modules/KalturaSupport/tests/AccessControlPlaylistBlockMobileFirstEntry.qunit.html
@@ -30,7 +30,18 @@ function jsKalturaPlayerTest( videoId ){
 <h2> AccessControl Playlist Block Mobile First Entry Test </h2>
 <a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
 <br />
-
+<div id="kaltura_player" style="width:400px;height:680px"></div>
+<script>
+	kWidget.embed( 'kaltura_player', {
+		'wid': '_243342',
+		'uiconf_id' : '7752592',
+		'flashvars': {
+			'playlistAPI.autoInsert': true,
+			'playlistAPI.kpl0Name' :'First Entry Device Restricted',
+			'playlistAPI.kpl0Url' : 'http%3A%2F%2Fwww.kaltura.com%2Findex.php%2Fpartnerservices2%2Fexecuteplaylist%3Fuid%3D%26partner_id%3D243342%26subp_id%3D24334200%26format%3D8%26ks%3D%7Bks%7D%26playlist_id%3D0_n5f8k5yq&'
+		}
+	});
+</script>
 <object id="kaltura_player" 
 	name="kaltura_player" 
 	type="application/x-shockwave-flash" 
