replace $j with $ added function wrap to vastAdParser

--- a/modules/EmbedPlayer/tests/Player_DynamicEmbed.html
+++ b/modules/EmbedPlayer/tests/Player_DynamicEmbed.html
@@ -11,7 +11,7 @@
 
 	mw.load('EmbedPlayer', function(){
       // seems to trip a bug in IE8/win7
-      $j('#mwplayer').embedPlayer({
+      $('#mwplayer').embedPlayer({
     	 'poster' : "http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/bbb480.jpg",
           'sources':[{
               	'src':'http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/bbb_trailer_iphone.m4v',
