--- a/modules/KalturaSupport/tests/CaptionsCustomVarsTTML.qunit.html
+++ b/modules/KalturaSupport/tests/CaptionsCustomVarsTTML.qunit.html
@@ -22,7 +22,7 @@ function jsKalturaPlayerTest( videoId ){
 			window['onPlayerSeekEnd'] = function(){
 				kdp.sendNotification( 'doPause', 2);
 				ok( $iframe.find('.track').length, "text container in DOM");
-				equal( $iframe.find('.track').text(), " RED ALIGN LEFT, ROW 0 COL 10 ALIGN RIGHT. ROW 0 COL 10 Line Break.", "Text matches ttml");
+				equal( $iframe.find('.track').text(), " RED ALIGN LEFT, ROW 0 COL 10 ", "Text matches ttml");
 				start();
 			};
 			// Setup text:
