--- a/modules/KalturaSupport/tests/CaptionsUnderPlayer.qunit.html
+++ b/modules/KalturaSupport/tests/CaptionsUnderPlayer.qunit.html
@@ -21,10 +21,12 @@ function jsKalturaPlayerTest( videoId ){
 			
 			window['onPlayerSeekEnd'] = function(){
 				kdp.sendNotification( 'doPause', 2);
-				
-				ok( $iframe.find('.captionContainer').length, "Text container in DOM");
-				equal( $iframe.find('.track span').text(), "Harold is the coffee alright?", "Text matches srt");
-				start();
+				// give time for the captions to load
+				setTimeout(function(){
+					ok( $iframe.find('.captionContainer').length, "Text container in DOM");
+					equal( $iframe.find('.track span').text(), "Harold is the coffee alright?", "Text matches srt");
+					start();
+				},1000 );
 			};
 			
 			// Setup text:
