--- a/modules/KalturaSupport/tests/CaptionsCustomVars.qunit.html
+++ b/modules/KalturaSupport/tests/CaptionsCustomVars.qunit.html
@@ -21,9 +21,9 @@ function jsKalturaPlayerTest( videoId ){
 			
 			window['onPlayerSeekEnd'] = function(){
 				kdp.sendNotification( 'doPause', 2);
-				// check for captions: 
-				// give time for the text source to load: 
+				// Give time for the captions to load
 				setTimeout(function(){
+					// check for captions: 
 					ok( $iframe.find('.captionContainer').length, "Text container in DOM");
 					equal( $iframe.find('.track span').text(), "Harold is the coffee alright?", "Text matches srt");
 					start();
