--- a/modules/KalturaSupport/tests/CaptionsCustomVarsTTML.qunit.html
+++ b/modules/KalturaSupport/tests/CaptionsCustomVarsTTML.qunit.html
@@ -21,7 +21,7 @@ function jsKalturaPlayerTest( videoId ){
 			
 			window['onPlayerSeekEnd'] = function(){
 				kdp.sendNotification( 'doPause', 2);
-				// give time for the text source to load: 
+				// Give time for the text source to load: 
 				setTimeout(function(){
 					ok( $iframe.find('.track').length, "text container in DOM");
 					equal( $iframe.find('.track').text(), " RED ALIGN LEFT, ROW 0 COL 10 ALIGN RIGHT. ROW 0 COL 10 Line Break.", "Text matches ttml");
