--- a/modules/KalturaSupport/tests/CaptionsUnderPlayer.qunit.html
+++ b/modules/KalturaSupport/tests/CaptionsUnderPlayer.qunit.html
@@ -21,7 +21,7 @@ function jsKalturaPlayerTest( videoId ){
 			
 			window['onPlayerSeekEnd'] = function(){
 				kdp.sendNotification( 'doPause', 2);
-				// give time for the captions to load
+				// Give time for the captions to load
 				setTimeout(function(){
 					ok( $iframe.find('.captionContainer').length, "Text container in DOM");
 					equal( $iframe.find('.track span').text(), "Harold is the coffee alright?", "Text matches srt");
