--- a/modules/KalturaSupport/tests/ResizablePlayer.html
+++ b/modules/KalturaSupport/tests/ResizablePlayer.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <title>Resizable Player</title>
-	<script type="text/javascript" src="../../../libraries/jquery/jquery-1.7.2.js"></script>
-	<script type="text/javascript" src="../../../libraries/jquery/jquery.ui/ui/jquery-ui-1.8.16.custom.js"></script>
-	<script type="text/javascript" src="../../../libraries/jquery/plugins/jquery.ui.touchPunch.js"></script>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js"></script>
+	<script type="text/javascript" src="../../../modules/MwEmbedSupport/jquery/jquery.ui.touchPunch.js"></script>
 	<script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
 	<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/base/jquery-ui.css" />
 	<style>
