inherent player thumbnail size instead of computing it

--- a/modules/KalturaSupport/tests/ThumbnailEmbedManyPlayers.qunit.html
+++ b/modules/KalturaSupport/tests/ThumbnailEmbedManyPlayers.qunit.html
@@ -58,8 +58,7 @@ Default:( Thumb embed ) <br>
 							'height': 240,
 							'float':'left',
 							'position': 'relative',
-							'padding-right': 10,
-							'padding-bottom': 10
+							'margin': 5
 						})
 			)
 			var entryId = possibleEntries[ Math.floor(Math.random()*possibleEntries.length) ]
