documentation stubs, added bootstrap external module for pretty docs

--- a/modules/KalturaSupport/tests/BasicPlayer.qunit.html
+++ b/modules/KalturaSupport/tests/BasicPlayer.qunit.html
@@ -1,14 +1,14 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Basic Player test</title>
+<title>Basic Player Rewrite Object test</title>
 <script type="text/javascript" src="../../../tests/qunit/qunit-bootstrap.js"></script>
 <script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
 <script type="text/javascript">	
 function jsKalturaPlayerTest( videoId ){
 	
 	// Name this module
-	module( "Basic Player" );
+	module( "Basic Player Rewrite Object" );
 
 	var $iframe = $( '#' + videoId + '_ifp' ).contents();
 	var iframeContext = window.frames['kaltura_player_ifp'];
@@ -45,7 +45,7 @@ function jsKalturaPlayerTest( videoId ){
 <script type="text/javascript" src="resources/qunit-kaltura-bootstrap.js"></script>
 </head>
 <body>
-<h2> Basic Player test </h2>
+<h2> Basic Player Rewrite Object test </h2>
 <a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
 <br />
 
