updated eventId for percentageReached

--- a/modules/Omniture/tests/siteCatalyst15Playlist.html
+++ b/modules/Omniture/tests/siteCatalyst15Playlist.html
@@ -38,7 +38,7 @@ kWidget.embed({
 		'playlistAPI.autoInsert': true,
 		'playlistAPI.kpl0Url' : 'http%3A%2F%2Fwww.kaltura.com%2Findex.php%2Fpartnerservices2%2Fexecuteplaylist%3Fuid%3D%26partner_id%3D27017%26subp_id%3D2701700%26format%3D8%26ks%3D%7Bks%7D%26playlist_id%3D1_x5xejs84&',
 		'playlistAPI.kpl0Name' : 'clips',
-		'autoPlay' : true
+		'autoPlay' : true,
 		
 		// All siteCatalist vars repeated here for easy debug:
 		'siteCatalyst15.sCodePath' : null,
