--- a/modules/KalturaSupport/tests/JsApi.html
+++ b/modules/KalturaSupport/tests/JsApi.html
@@ -4,10 +4,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>KDP3 | Kaltura Dynamic Player version 3 JavaScript Playground</title>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-		<script type="text/javascript" src="http://www.kaltura.org/demos/kdp3/jslib/swfobject.js"></script>
-		<script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>		
-		<script type="text/javascript" src="http://www.kaltura.org/demos/kdp3/jslib/syntax/prettify.js"></script>
-		<link type="text/css" rel="stylesheet" href="http://www.kaltura.org/demos/kdp3/jslib/syntax/prettify.css" />
+		<script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
 		<style type="text/css">
 			html, body { margin:0; padding:0; }
 			body, td, th, pre, code, select, option, input, textarea { font-family:"Trebuchet MS", Arial, Sans-serif; font-size:10pt; }
@@ -108,26 +105,34 @@
 				'freePreviewEnd'
 			];
 
-			function jsCallbackReady () {
+			function jsCallbackReady ( playerId ) {
+				
+				var player = window.player = $( '#' + playerId )[0];
 
-				$('#kdp3').get(0).addJsListener("volumeChanged", "volumeChangedHandler");
-				$('#kdp3').get(0).addJsListener("playerStateChange", "playerStateChangeHandler");
-				$('#kdp3').get(0).addJsListener("durationChange", "durationChangeHandler");
-				$('#kdp3').get(0).addJsListener("playerUpdatePlayhead", "playerUpdatePlayheadHandler");
-				$('#kdp3').get(0).addJsListener("bytesTotalChange", "bytesTotalChangeHandler");
-				$('#kdp3').get(0).addJsListener("bytesDownloadedChange", "bytesDownloadedChangeHandler");
+				player.addJsListener("volumeChanged", "volumeChangedHandler");
+				player.addJsListener("playerStateChange", "playerStateChangeHandler");
+				player.addJsListener("durationChange", "durationChangeHandler");
+				player.addJsListener("playerUpdatePlayhead", "playerUpdatePlayheadHandler");
+				player.addJsListener("bytesTotalChange", "bytesTotalChangeHandler");
+				player.addJsListener("bytesDownloadedChange", "bytesDownloadedChangeHandler");
 
 				for (var i=0; i < notificationslist.length; ++i) {
-					if (notificationslist[i] != 'playerUpdatePlayhead') {
-						$('#kdp3').get(0).addJsListener(notificationslist[i], notificationslist[i]+"Handler2");
-						codeBlock = 'function '+notificationslist[i]+'Handler2(data, id) {if ($("#stopListeners").attr("checked") == false){$("#notifications").text($("#notifications").text() + "'+notificationslist[i]+': ");printobj(data);}}';
-						appendScript (codeBlock);
-					}
+					(function( notificationName ) {
+						if( notificationName == 'playerUpdatePlayhead' ) { return ; }
+						var callbackName = notificationName + "_Handler2";
+						player.addJsListener(notificationName, callbackName);
+						window[ callbackName ] = function( data, id ) {
+							if ( ! $("#stopListeners").is(':checked') ) {
+								$("#notifications").text( $("#notifications").text() + notificationName + ": ");
+								printobj(data);
+							}
+						};
+					}( notificationslist[i] ));
 				}
 			}
 
 			function printobj (obj) {
-				x = '';
+				var x = '';
 				if (typeof(obj) == 'object') {
 					for (var key in obj) {
 						x += key + " => " + obj[key] + ", ";
@@ -137,11 +142,12 @@
 				}
 				var oldscroll = $("#notifications").scrollTop();
 				$("#notifications").text($("#notifications").text() + x + '\n');
-				if ($('#autoscroll').attr('checked') == true)
-				$("#notifications").scrollTop($("#notifications").get(0).scrollHeight);
-			else
-			$("#notifications").scrollTop(oldscroll);
-	}
+				if ($('#autoscroll').attr('checked') == true) {
+					$("#notifications").scrollTop($("#notifications").get(0).scrollHeight);
+				} else {
+					$("#notifications").scrollTop(oldscroll);
+				}
+			}
 
 	function appendScript (code) {
 		x = '<' + 'script type="text/javascript" >' + code +'</' + 'script>';
@@ -182,49 +188,6 @@
 		$('#videotime').text(data);
 	}
 	</script>
-	<script type="text/javascript">
-	var flashvars = {};
-	flashvars.autoPlay = "false";
-	//flashvars.entryId = "http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/bbb.flv";
-	//flashvars.sourceType = "url";
-	flashvars.entryId = "1_tm57pwui";
-	flashvars.sourceType = "entryId";
-	//flashvars.debugMode = "true";
-	//flashvars.fileSystemMode = "true";
-	flashvars.widgetId = "_309";
-	flashvars.partnerId = "309";
-	//flashvars.pluginDomain = "plugins/";
-	//flashvars.kml = "local";
-	//flashvars.kmlPath = "config.xml";
-	flashvars.host = "www.kaltura.com";
-	//flashvars.cdnHost = "cdn.kaltura.com";
-	flashvars.externalInterfaceDisabled = "false";
-	//DEFINE CUSTOM SKIN URL -
-	//flashvars.skinPath = "http://localhost/kdp3-js-playground/themes/kdp-skin/skin.swf";
-	/*
-					//DEFINE OPENX BANNER USING WATERMARK PLUGIN -
-					flashvars['bannerad.watermarkClickPath']='http://d1.openx.org/ck.php?n=a45b33cc';
-					flashvars['bannerad.watermarkPath']='http://d1.openx.org/avw.php?zoneid=110118&cb=22&n=a45b33cc';
-					flashvars['bannerad.width']=468;
-					flashvars['bannerad.height']=60;
-					flashvars['bannerad.plugin']=true;
-					flashvars['bannerad.position']='firstChild';
-					flashvars['bannerad.relativeTo']='player';
-					flashvars['bannerad.className']='Watermark';
-	 */
-	var params = {};
-	params.quality = "best";
-	params.wmode = "opaque";
-	params.allowfullscreen = "true";
-	params.allowscriptaccess = "always";
-
-	var attributes = {};
-	attributes.id = "kdp3";
-	attributes.name = "kdp3";
-	attributes.styleclass = "player";
-	swfobject.embedSWF("http://www.kaltura.com/index.php/kwidget/cache_st/1286380015/wid/_309/uiconf_id/1913582/", "kdp3", "570", "380", "10.0.0", "jslib/expressInstall.swf", flashvars, params, attributes);
-	//]]>
-	</script>
 	<style type="text/css">
 			/*<![CDATA[*/
 			div.c3 {clear:both;margin-top:10px;}
@@ -236,30 +199,25 @@
 	<body>
 		<div id="controls_menu" class="sideBox content">
 			<strong><a href="docs.html">[Go to KDP3 Docs]</a></strong>
-			<h2>
-				Player Control
-			</h2><dfn title=
-					  "Click the play, pause or stop buttons to control the player playback. Set a time in seconds to the seek field and click the 'seek to' button to jump to that seconds in the playing media">Playback
-				control:</dfn><a href="docs.html#sendnotification">[docs]</a>
+			<h2>Player Control</h2>
+			<dfn title="Click the play, pause or stop buttons to control the player playback. Set a time in seconds to the seek field and click the 'seek to' button to jump to that seconds in the playing media">Playback control:</dfn>
 			<div class="controls">
-				<a href="#" onclick="$('#kdp3').get(0).sendNotification('doPlay');return false;">Play</a> |
-				<a href="#" onclick="$('#kdp3').get(0).sendNotification('doPause');return false;">Pause</a>
-				| <a href="#" onclick="$('#kdp3').get(0).sendNotification('doStop');return false;">Stop</a>
+				<a href="#" onclick="player.sendNotification('doPlay');return false;">Play</a> |
+				<a href="#" onclick="player.sendNotification('doPause');return false;">Pause</a>
+				| <a href="#" onclick="player.sendNotification('doStop');return false;">Stop</a>
 			</div>
 			<div class="controls">
-				Seek to: <input type="text" size="4" id="seekto" value="25" /><button onclick=
-			"$('#kdp3').get(0).sendNotification('doSeek', parseFloat($('#seekto').val()));return false;">Seek</button>
+				Seek to: <input type="text" size="4" id="seekto" value="25" /><button onclick="player.sendNotification('doSeek', parseFloat($('#seekto').val()));return false;">Seek</button>
 			</div><br />
 			<dfn title=
 				 "Use the controls below to mute or unmute the player volume or enter a number between 0 and 1 in the 'Set volume' field and click the 'Change' button to set the player volume">
 				Volume control:</dfn>
 			<div class="controls">
-				<a href="#" onclick="newVolume=$('#kdp3').get(0).evaluate('{video.volume}');if(newVolume>0)oldVolume=newVolume;$('#kdp3').get(0).sendNotification('changeVolume', 0);return false;">
-					Mute</a> | <a href="#" onclick=
-				"$('#kdp3').get(0).sendNotification('changeVolume', oldVolume);return false;">Unmute</a>
+				<a href="#" onclick="newVolume=player.evaluate('{video.volume}');if(newVolume>0)oldVolume=newVolume;player.sendNotification('changeVolume', 0);return false;">
+					Mute</a> | <a href="#" onclick="player.sendNotification('changeVolume', oldVolume);return false;">Unmute</a>
 			</div>
 			<div class="controls">
-				Set volume: <input type="text" size="2" id="vol" value="1" /><span class="c1">(0-1)</span><button onclick="$('#kdp3').get(0).sendNotification('changeVolume', parseFloat($('#vol').val()));return false;">Change</button>
+				Set volume: <input type="text" size="2" id="vol" value="1" /><span class="c1">(0-1)</span><button onclick="player.sendNotification('changeVolume', parseFloat($('#vol').val()));return false;">Change</button>
 			</div><br />
 			<dfn title=
 				 "Common statistics that are available, these are basically listeners to events and evaluation of KDP objects">
@@ -275,8 +233,7 @@
 				<dfn title=
 					 "The box below lists all the events that are handled by KDP, for readability, we do not list the playerUpdatePlayhead notification by default, since it is being called too often, tick the playerUpdatePlayhead checkbox below to list this notification as well">
 					Notifications:</dfn><a href="docs.html#addlistener">[docs]</a><input type="checkbox" id="autoscroll" checked="checked" /><label for="autoscroll">AutoScroll?</label> 
-				<textarea id="notifications" class="c2">
-				</textarea><br />
+				<textarea id="notifications" class="c2"></textarea><br />
 				<input type="checkbox" id="listenToUpdate" /><label for="listenToUpdate">Listen to
 					playerUpdatePlayhead</label><a href="docs.html#notifications">[docs]</a><br />
 				<input type="checkbox" id="stopListeners" /><label for="stopListeners">Stop
@@ -288,10 +245,20 @@
 				Kaltura Dynamic Player version 3 JavaScript Playground
 			</h1>
 			<p>
-				Hover over the parameters or APIs from the list for description, click to test &amp; learn
-				more.
+				<a href="?forceMobileHTML5">Force HTML5 Player</a>
 			</p>
-			<div id="kdp3"></div>
+			<object id="kdp3" name="kdp3" type="application/x-shockwave-flash" allowFullScreen="true" 
+				allowNetworking="all" allowScriptAccess="always" height="333" width="400" xmlns:dc="http://purl.org/dc/terms/" 
+				xmlns:media="http://search.yahoo.com/searchmonkey/media/" rel="media:video" 
+				resource="http://www.kaltura.com/index.php/kwidget/cache_st/1292436446/wid/_243342/uiconf_id/2877502/entry_id/0_uka1msg4" 
+				data="http://www.kaltura.com/index.php/kwidget/cache_st/1292436446/wid/_243342/uiconf_id/2877502/entry_id/0_uka1msg4">
+					<param name="allowFullScreen" value="true" />
+					<param name="allowNetworking" value="all" />
+					<param name="allowScriptAccess" value="always" />
+					<param name="bgcolor" value="#000000" />
+					<param name="flashVars" value="&externalInterfaceDisabled=false" />
+					<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1292436446/wid/_243342/uiconf_id/2877502/entry_id/0_uka1msg4" />
+			</object>
 		</div>
 		<div id="cleardiv" class="c3"></div>
 	</body>
