--- a/modules/KalturaSupport/tests/BasicPlayer.qunit.html
+++ b/modules/KalturaSupport/tests/BasicPlayer.qunit.html
@@ -3,8 +3,9 @@
 <head>
 <title>Basic Player Rewrite Object test</title>
 <script type="text/javascript" src="../../../tests/qunit/qunit-bootstrap.js"></script>
+<script type="text/javascript" src="../../../docs/js/doc-bootstrap.js"></script>
 <script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
-<script type="text/javascript">	
+<script type="text/javascript">
 function jsKalturaPlayerTest( videoId ){
 	
 	// Name this module
