--- a/modules/KalturaSupport/tests/BumperVideoNoAdd.html
+++ b/modules/KalturaSupport/tests/BumperVideoNoAdd.html
@@ -8,8 +8,8 @@
 		<h1>Bumper Only</h1>
 		<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop html5 browsers<br /><br />
 	<b>Preroll Bumper</b><br></br>
-		<object id="kaltura_player_1309251063" 
-			name="kaltura_player_1309251063" 
+		<object id="kaltura_preroll" 
+			name="kaltura_preroll" 
 			type="application/x-shockwave-flash"
 			allowFullScreen="true" 
 			allowNetworking="all" 
@@ -27,11 +27,11 @@
 				<param name="bgcolor" value="#000000" />
 				<param name="flashVars" value="&" />
 				<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1309251063/wid/_423851/uiconf_id/5021691/entry_id/1_yc8dql4j" />	
-		</object>
+		</object> 
 <br></br>
 	<b>Postroll Bumper</b><br></br>
-	<object id="kaltura_player_1309251063" 
-			name="kaltura_player_1309251063" 
+	<object id="kaltura_postroll" 
+			name="kaltura_postroll" 
 			type="application/x-shockwave-flash"
 			allowFullScreen="true" 
 			allowNetworking="all" 
