add qunit bootstrap to bumper video no add

--- a/modules/KalturaSupport/tests/BumperVideoNoAdd.html
+++ b/modules/KalturaSupport/tests/BumperVideoNoAdd.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+		<script type="text/javascript" src="../../../tests/qunit/qunit-bootstrap.js"></script>
 		<script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
 		<title>Bumper Only + URL</title>
 	</head>
