Added support for overriding moderation reasons via flashvars

--- a/modules/KalturaSupport/tests/moderationPluginTest.html
+++ b/modules/KalturaSupport/tests/moderationPluginTest.html
@@ -28,7 +28,7 @@
 	<param name="allowNetworking" value="all" />
 	<param name="allowScriptAccess" value="always" />
 	<param name="bgcolor" value="#000000" />
-	<param name="flashVars" value="&" />
+	<param name="flashVars" value="&moderation.reasonSex=Overriden Message" />
 	<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1327566632/wid/_861182/uiconf_id/6980551/entry_id/1_8ions2uv" />
 	<a href="http://corp.kaltura.com">video platform</a> 
 	<a href="http://corp.kaltura.com/video_platform/video_management">video management</a> 
