added loop attribute to playlistKalutraApi test file

--- a/modules/KalturaSupport/tests/PlaylistKalturaApi.qunit.html
+++ b/modules/KalturaSupport/tests/PlaylistKalturaApi.qunit.html
@@ -189,7 +189,7 @@ rel="media:video" resource="http://www.kaltura.com/index.php/kwidget/cache_st/13
 data="http://www.kaltura.com/index.php/kwidget/cache_st/130645359/wid/_243342/uiconf_id/4690912">
 <param name="allowFullScreen" value="true" /><param name="allowNetworking" value="all" />
 <param name="allowScriptAccess" value="always" /><param name="bgcolor" value="#000000" />
-<param name="flashVars" value="&" />
+<param name="flashVars" value="&playlistAPI.loop=true" />
 <param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1306453594/wid/_243342/uiconf_id/4690912" />
 <a href="http://corp.kaltura.com">video platform</a> <a href="http://corp.kaltura.com/video_platform/video_management">video management</a> 
 <a href="http://corp.kaltura.com/solutions/video_solution">video solutions</a>
