enable options menu on test page #206

--- a/modules/KalturaSupport/tests/OptionsMenu.html
+++ b/modules/KalturaSupport/tests/OptionsMenu.html
@@ -3,6 +3,7 @@
 <head>
 <title>Options Menu</title>
 <script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
+<script>mw.setConfig('EmbedPlayer.EnableOptionsMenu', true );</script>
 </head>
 <body>
 
@@ -14,7 +15,7 @@
 	<param name="allowNetworking" value="all" />
 	<param name="allowScriptAccess" value="always" />
 	<param name="bgcolor" value="#000000" />
-	<param name="flashVars" value="optionsMenu.visible=false&optionsMenu.includeInLayout=false" />
+	<param name="flashVars" value="" />
 	<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1322485191/wid/_423851/uiconf_id/6406621/entry_id/1_7yo0pf7m" />
 </object>
 <br />
