updated entry & player

--- a/modules/KalturaSupport/tests/LoadTimeTest.html
+++ b/modules/KalturaSupport/tests/LoadTimeTest.html
@@ -33,9 +33,9 @@
 	};
 	kWidget.embed({
 		'targetId': 'myPlayer',
-		'wid': '_243342',
-		'uiconf_id' : '2877502',
-		'entry_id' : '0_uka1msg4',
+		'wid': '_423851',
+		'uiconf_id' : '8776232',
+		'entry_id' : '1_9t28c1xt',
 		'flashvars':{
 			'externalInterfaceDisabled' : false,
 			'autoPlay' : true
