--- a/modules/KalturaSupport/tests/BumperVideoNoAdd.qunit.html
+++ b/modules/KalturaSupport/tests/BumperVideoNoAdd.qunit.html
@@ -8,34 +8,46 @@
 	<body>
 		<h1>Bumper Only</h1>
 		<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop html5 browsers<br /><br />
+		<div id="test_player_target"></div>
 	<script type="text/javascript">	
 		function jsKalturaPlayerTest( videoId ){
-			
+			var kdp = $('#' + videoId)[0];
 			// Name this module
 			module( "Bumper player test" );
-		
+			
+			// check for preroll
+			asyncTest("preroll playback test", function(){
+				window['onAdStart'] = function(){
+					ok( true, 'recived on ad start event');
+					start();
+				}
+				
+				kalturaQunitWaitForPlayer(function(){
+					kdp.addJsListener('adStart', 'onAdStart');
+					kdp.sendNotification('doPlay');
+				});
+			});
 		}
 	</script>
+	<script type="text/javascript" src="resources/qunit-kaltura-bootstrap.js"></script>
 		<b>Preroll Bumper</b><br></br>
 		<div style="width:400px;height:330px" id="kaltura_preroll"></div>
 		<script>
 			// output a player if not running a test
-			if( !window.Qunit ){
-				kWidget.embed( 'kaltura_preroll',
-					{
-						'wid': '_423851',
-						'uiconf_id' : '5021691',
-						'entry_id' : '1_yc8dql4j'
-					}
-				)
-			}
+			kWidget.embed( 'kaltura_preroll',
+				{
+					'wid': '_423851',
+					'uiconf_id' : '5021691',
+					'entry_id' : '1_yc8dql4j'
+				}
+			);
 		</script>
 <br></br>
 	<b>Postroll Bumper</b><br></br>
 	<div style="width:400px;height:330px" id="kaltura_postroll"></div>
 	<script>
 		// output a player if not running a test
-		if( !window.Qunit ){
+		if( !window.QUnit ){
 			kWidget.embed( 'kaltura_postroll',
 				{
 					'wid': '_423851',
