added some legacy plugin support functions

--- a/modules/KalturaSupport/tests/AccessControlPlaylistBlockMobileFirstEntry.qunit.html
+++ b/modules/KalturaSupport/tests/AccessControlPlaylistBlockMobileFirstEntry.qunit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>AccessControl Playlist Block Mobile First Entry test</title>
+<title>AccessControl Playlist Block iOS on First Entry test</title>
 <script type="text/javascript" src="../../../tests/qunit/qunit-bootstrap.js"></script>
 <script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
 <script type="text/javascript">	
