--- a/modules/KalturaSupport/tests/kWidget.embed.qunit.html
+++ b/modules/KalturaSupport/tests/kWidget.embed.qunit.html
@@ -3,6 +3,7 @@
 <head>
 <title>kWidget Player test</title>
 <script type="text/javascript" src="../../../tests/qunit/qunit-bootstrap.js"></script>
+<script type="text/javascript" src="../../../docs/js/doc-bootstrap.js"></script>
 <script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
 <script type="text/javascript">	
 window.inlineReadyCallbackCalled = false;
@@ -151,8 +152,9 @@ function findUltimateAncestor(node) {
 <script type="text/javascript" src="resources/qunit-kaltura-bootstrap.js"></script>
 </head>
 <body>
-<h2> kWidget Player test </h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<h2> kWidget embed</h2>
+<span id="playbackModeSelector"></span>
+<br><br>
 <br />
 <div id="myVideoContainer">
 	<div id="myVideoTarget" style="width:400px;height:330px;">
@@ -175,7 +177,6 @@ function findUltimateAncestor(node) {
 		'entry_id' : '0_uka1msg4',
 		'flashvars':{
 			'externalInterfaceDisabled' : false,
-			'autoPlay' : true,
 			'fooBar': 'cats'
 		},
 		'readyCallback': function( playerId ){
