fixed thumbanil tests and documentation

--- a/modules/KalturaSupport/tests/kWidget.embed.playlist.qunit.html
+++ b/modules/KalturaSupport/tests/kWidget.embed.playlist.qunit.html
@@ -36,9 +36,13 @@ function jsKalturaPlayerTest( videoId ){
 <script type="text/javascript" src="resources/qunit-kaltura-bootstrap.js"></script>
 </head>
 <body>
-<h2> kWidget Playlist test </h2>
+<h2> kWidget Playlist embed </h2>
+
+kWidget can also easialy be used to embed playlists, simply pass along playlist plugin configuration as flashvars: 
+
+
 <span id="playbackModeSelector"></span>
-<br><br>
+<br>
 
 <div id="myVideoTarget" style="width:400px;height:620px;">
 	<!--  SEO and video metadata go here -->
